[tool.poetry]
name = "quiz_app"
version = "0.1.0"
description = "Quiz 응시 시스템"
authors = ["김강현 / KimKangHyen <jo21yo@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
SQLAlchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.10.0"
python-jose = "^3.3.0"
passlib[bcrypt] = "^1.7.4"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"